Populate edit products

--- a/app/product/product.template.html
+++ b/app/product/product.template.html
@@ -18,7 +18,7 @@
                     <td>{{ p.description }}</td>
                     <td>{{ p.price }}</td>
                     <td>
-                        <button class="btn btn-info">
+                        <button class="btn btn-info" (click)="editProduct(p)">
                             <i class="fa fa-edit"></i>
                         </button>
                         <button class="btn btn-danger">
@@ -29,18 +29,18 @@
             </tbody>
         </table>
 
-        <button class="btn btn-success"><i class="fa fa-plus"></i></button>
+        <button class="btn btn-success" (click)="addProduct()"><i class="fa fa-plus"></i></button>
         <br />
         <br />
 
-        <form>
+        <form *ngIf="productForm">
             <h2>Product Details</h2>
-            <p>ID: <input type="text" name="id" /></p>
-            <p>Name: <input type="text" name="name" /></p>
-            <p>Description: <input type="text" name="description" /></p>
-            <p>Price: <input type="text" name="price" /></p>
+            <p>ID: <input type="text" name="id" [(ngModel)]="newProduct.id" /></p>
+            <p>Name: <input type="text" name="name" [(ngModel)]="newProduct.name" /></p>
+            <p>Description: <input type="text" name="description" [(ngModel)]="newProduct.description" /></p>
+            <p>Price: <input type="text" name="price" [(ngModel)]="newProduct.price" /></p>
             <p>
-                <button type="button" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-primary" (click)="saveProduct(newProduct)">Submit</button>
                 <button type="button" class="btn btn-warning">Cancel</button>
             </p>
         </form>
