Implement adding of products

--- a/app/product/product.template.html
+++ b/app/product/product.template.html
@@ -41,7 +41,7 @@
             <p>Price: <input type="text" name="price" [(ngModel)]="newProduct.price" /></p>
             <p>
                 <button type="button" class="btn btn-primary" (click)="saveProduct(newProduct)">Submit</button>
-                <button type="button" class="btn btn-warning">Cancel</button>
+                <button type="button" class="btn btn-warning" (click)="cancelForm()">Cancel</button>
             </p>
         </form>
     </div>
