--- a/app/product/product.template.html
+++ b/app/product/product.template.html
@@ -21,7 +21,7 @@
                         <button class="btn btn-info" (click)="editProduct(p)">
                             <i class="fa fa-edit"></i>
                         </button>
-                        <button class="btn btn-danger">
+                        <button class="btn btn-danger" (click)="deleteProduct(p)">
                             <i class="fa fa-minus"></i>
                         </button>
                     </td>
